styles/styles.css
@font-face {
    font-family: circular;
    src: url(../assets/fonts/Circular/CircularStd-Medium.otf);
}

@font-face {
    font-family: circular-light;
    src: url(../assets/fonts/Circular/CircularStd-Light.otf);
}

body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    /* font-family: "Poppins"; */
    /* font-family: circular-light; */

    --primary-background: #F9FCFF;
    --primary-text: #31486b;

    --primary-background-dark: #ebebeb;

    font-size: 1rem;
    line-height: 2rem;
    background-color: var(--primary-background);
    color: var(--primary-text);
}

header {
    width: 100vw;
    box-sizing: border-box;

    overflow: hidden;

    top: 0;
    left: 0;

    display: flex;
    flex-direction: row;

    /* font-weight: bold; */
    font-family: circular;
    font-size: 1.1rem;

    padding: 10px 30px 10px 30px;

    /* border-bottom: 1px solid rgb(200, 200, 200); */
}

header.overlay {
    position: absolute;   
    z-index: 10;
    color: white;
    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0));
}

header:not(.overlay) {
    box-shadow: 3px 3px 10px 10px rgb(0, 0, 0, 0.05);
}

header.overlay .logo {
    filter: invert(100%);
}

footer {
    padding: 80px 20px 80px 20px;

    font-size: 0.9rem;
    line-height: 1.7rem;

    background-color: white;
    
    box-shadow: 3px 3px 10px 10px rgb(0, 0, 0, 0.05);    /* border-top: 1px solid rgb(200, 200, 200); */
    /* background-color: white; */
}

footer a {
    color: inherit;
    text-decoration: none;

}

footer a:hover {
    text-decoration: underline;
}

.footer-content {
    display: flex;
    flex-direction: row;

    gap: 40px;

    max-width: 1080px;
    margin: auto;
}

.footer-content > div {
    width: 100%;
}

.footer-content > div > h2 {
    font-weight: bold;
    margin-bottom: 1rem;
}

.footer-content > div > *:not(h2) {
    color: rgb(114, 117, 120);
}

.footer-table {
    display: grid;

    grid-template-columns: repeat(2, 1fr);
    max-width: 275px;
}

.footer-table > li {
    box-sizing: border-box;
    padding: 0 10px 0 0;
}

.logo {
    max-height: 40px;
    filter: invert(25%) sepia(11%) saturate(2661%) hue-rotate(177deg) brightness(91%) contrast(84%);
}

.logo-link {
    display: flex;
    align-items: center;
}

nav {
    display: flex;
    flex-direction: row;

    font-size: 1rem;

    width: 100%;
}

nav > ul {
    display: flex;
    align-items: center;
    
    width: 100%;
    justify-content: flex-end;

    column-gap: 20px;
    padding: 0 20px 0 20px;
}

nav > ul > li > a {
    color: inherit;
    text-decoration: none;
    opacity: 0.95;
    transition: opacity 0.34s ease;
}

nav > ul > li > a:hover {
    opacity: 1;
    text-decoration: underline;
}

main {
    /* max-width: 1080px; */
    min-height: 100vh;
    margin: auto;

    box-sizing: border-box;
}

main > div:not(.hero-banner):not(.no-margin) {
    max-width: 1080px;

    margin-top: 40px;
    margin-left: auto;
    margin-right: auto;
}

.container-padding {
    margin-top: 40px;
}

.container-padding > div {
    max-width: 1080px;
    margin-left: auto;
    margin-right: auto;
}

.button {
    background-color: var(--primary-background);
    color: var(--primary-text);
    border: 1px solid var(--primary-text);

    font-family: circular;
    text-decoration: none;
    font-size: 0.9rem;

    filter: brightness(1);

    /* border-radius: 100px; */
    border-radius: 3px;
    padding: 16px 32px 16px 32px;

    transition: filter 100ms;
}

.hero-image-buttons > .button:last-child {
    background-color: var(--primary-text);
    color: var(--primary-background);
    border-color: var(--primary-text);
}

.button:hover {
    filter: brightness(93%);
}

.hero-banner {
    width: 100%;

    position: relative;
    overflow: hidden;

    height: calc(90vh - 50px);
}

.hero-banner.small {
    height: calc(60vh - 50px);
}

.hero-image {
    width: 100%;
    height: 100%;
    scale: 1;

    object-fit: cover;
    object-position: 0 0;

    filter: brightness(60%);
}

.hero-image.reflected {
    transform: scaleX(-1);
}

.hero-image-text {
    position: absolute;
    top: 20%;
    left: 15%;

    width: 100%;
    height: 100%;

    /* max-width: 200px; */

    padding: 20px;

    line-height: 2.75rem;

    color: white;
    font-family: circular;

    display: flex;
    flex-direction: column;

    text-align: left;
    /* justify-content: center; */
    align-items: flex-start;
}

.hero-image-text > h2 {
    font-size: 2rem;
    font-weight: bold;
}

.hero-image-text > p {
    font-family: circular-light;
    font-size: 1.25rem;

    max-width: 400px;
    margin-bottom: 2rem;
}

.hero-image-buttons {
    font-weight: normal;
}

.hero-image-buttons > .button:not(.hero-image-buttons > .button:last-child) {
    margin-right: 15px
}

.card-graphics {
    padding: 40px 15px 40px 15px;

    display: flex;
}

.card {
    padding: 15px;

    width: 100%;
}

.card-image {
    height: 50px;
    filter: invert(25%) sepia(11%) saturate(2661%) hue-rotate(177deg) brightness(91%) contrast(84%);
}

.card-title {
    font-family: "Montserrat";
    font-weight: bold;
}

.card-body {
    font-family: "Poppins";
    font-weight: 300;
}

.image-section {
    display: flex;
    flex-direction: row;
    
    gap: 20px;
    padding: 10px;
}

.image-section:nth-child(odd) {
    flex-direction: row-reverse;
}

.image-section > div {
    width: 100%;
    max-width: 600px;
}

.call-to-action {
    display: flex;
    flex-direction: column;
    
    justify-content: center;
    align-items: center;
    
    text-align: center;

    padding: 80px 0 80px 0;
}

.call-to-action > h2 {
    font-family: "Montserrat";
    font-weight: bold;
    font-size: 2rem;

    margin-bottom: 20px;
}

.call-to-action > p {
    margin-bottom: 30px;
    max-width: 600px;
}

.sources-list li {
    padding-left: 20px;
    text-indent: -20px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.sources-main {
    max-width: 920px;
    margin-top: 20px;
    margin-bottom: 40px;
}

